[project]
name = "tic-tool"
version = "0.0.1"
description = ""
authors = [
    {name = "tinc0709",email = "tinchy@yeah.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = 'primary'

